infra-kube/weave-scope-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weave-ingress
  namespace: weave
spec:
  ingressClassName: nginx
  rules:
    - host: weave.localhost
      http:
        paths:
          - backend:
              service:
                name: weave-scope-app
                port:
                  number: 4040
            path: /
            pathType: Prefix
